--- a/templates/index.html
+++ b/templates/index.html
@@ -123,28 +123,28 @@
         const closeModal = document.querySelector('.close-button');
 
         // Fetching hover button data 
-        fetch("static/traditional.txt")
+        fetch("static/hover/traditional.txt")
         .then(response => response.text())
         .then(data => {
             // Set the title attribute using the fetched data
             document.getElementById('traditional_model_button').title = data;
         })
 
-        fetch("static/machine_learning.txt")
+        fetch("static/hover/machine_learning.txt")
         .then(response => response.text())
         .then(data => {
             // Set the title attribute using the fetched data
             document.getElementById('ml_model_button').title = data;
         })
 
-        fetch("static/Naive_method.txt")
+        fetch("static/hover/Naive_method.txt")
         .then(response => response.text())
         .then(data => {
             // Set the title attribute using the fetched data
             document.getElementById('naive_model_button').title = data;
         })
 
-        fetch("static/download.txt")
+        fetch("static/hover/download.txt")
         .then(response => response.text())
         .then(data => {
             // Set the title attribute using the fetched data
