--- a/templates/report.html
+++ b/templates/report.html
@@ -22,6 +22,16 @@
         
     </div>
 
+    <div class="section-wrapper" id="M4_results">
+        <hr>
+        <h3>M4 Dataset overall results</h3>
+        <img src="{{ url_for('static', filename='images/MAPE.png') }}" alt="Description of the image" width="45%" height="45%">
+        <img src="{{ url_for('static', filename='images/min_mape.png') }}" alt="Description of the image" width="45%" height="45%">
+        <br><br><br><br>
+        <img src="{{ url_for('static', filename='images/max_mape.png') }}" alt="Description of the image" width="45%" height="45%">
+        <img src="{{ url_for('static', filename='images/avg_shape_similarity.png') }}" alt="Description of the image" width="45%" height="45%">
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- Navbar -->
