--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
             </a>
         </div>
         
-        <div class="section-wrapper" id="Export_responses">
+        <div id="Export_responses">
         </div>
 
     </div>
